pod.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: kotlindemo
  name: test-pod 
  labels:
    app: kotlindemo
spec:
  containers:
  - name: pod-demo
    image: localhost:5000/ron/kotlin/demo:v1
    ports: 
    - containerPort: 8080
