service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  namespace: kotlindemo
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: kotlindemo-depolyment
